# jsonrpc_server

./: meson.build  meson_options.txt
etc/: HEADER.txt
src/: generic_errors.c  jsonrpc.c  jsonrpc.h  jsonrpc_internal.h  main.c
subprojects/example/: meson.build
subprojects/example/src/: main.c
subprojects/libjsonrpc_server/: meson.build
subprojects/libjsonrpc_server/src/: generic_errors.c  generic_errors.h  jsonrpc.c  jsonrpc.h  jsonrpc_internal.h
